# teachserv

./: Cargo.toml  Readme.md  teachserv.toml
attendance/inbox/: readme.txt
attendance/outbox/: readme.txt
src/: attendance.rs  filerec.rs  main.rs  student.rs  teachrec.rs  wrong_pwd.rs
src/routes/: api_tables.rs  index.rs  login.rs  mod.rs  student.rs  teacher.rs
static/: attendance.js  hide-empty.js  index.css  login.css
templates/: attendance.html  captcha.html  footer.html  header.html  index-teacher.html  login.html  table-open.html
