[package]
name = "teachserv"
version = "0.1.0"
edition = "2021" # "2024"

[dependencies]
config = "0.15"
lazy_static = "1.5"

chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"

actix-web = "4.11"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["redis-session"] }
captcha = "1.0.0"
actix-files = "0.6"
tera = "1.20"
serde = { version = "1.0.219", features = ["derive"] }

